--- a/ECommerceApp/views/includes/altnavbar.pug
+++ b/ECommerceApp/views/includes/altnavbar.pug
@@ -6,15 +6,15 @@ nav.navbar.navbar-expand-lg.bg-secondary.mt-5.navbar-dark
         ul.navbar-nav.mr-auto
 
             if isAuthenticated 
-                if isAdmin || isSeller
+                if isLeadDeveloper || isAdmin
                     li.nav-item
                         a(href="/admin/add-product" class=(path === '/add-product' ? 'nav-link active':'nav-link')) Admin Add-Product
                     li.nav-item
                         a(href="/admin/products" class=(path === '/products' ? 'nav-link active':'nav-link')) Admin Products
 
-
-                    li.nav-item 
-                        a(href="/admin/add-category" class=(path === '/add-category'?'nav-link active':'nav-link'))  Admin Add-Category
-                    li.nav-item 
-                        a(href="/admin/category-list" class=(path === '/category-list'?'nav-link active':'nav-link')) Admin Categories
+                    if isLeadDeveloper
+                        li.nav-item 
+                            a(href="/admin/add-category" class=(path === '/add-category'?'nav-link active':'nav-link'))  Admin Add-Category
+                        li.nav-item 
+                            a(href="/admin/category-list" class=(path === '/category-list'?'nav-link active':'nav-link')) Admin Categories
 
